--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 * {
   box-sizing: border-box;
   font-family: Helvetica, sans-serif;
+
 }
 
+#container{
+  max-width:1000px;
+  margin: auto;
+}
 header {
   height: 95px;
-  background-color: aquamarine;
+  background-color: rgb(108, 110, 110);
   position: relative;
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 1030px;
+  
 
-}
-
-nav {
-  width: 960px;
-  margin: auto;
 }
 
 nav > ul {
@@ -20,51 +24,59 @@ nav > ul {
   top: 50%;
   height: 70px;
   margin-top: -35px;
+  padding-left: 30px;
 }
 
 nav > ul > li {
   float: left;
   margin-right: 50px;
   line-height: 60px;
+  font-size: 1.2em;
+  padding-bottom: 30px;
 }
 
-nav > ul > li:first-child {
-  margin-right: 25px;
+nav > ul > li > a{
+  text-decoration: none;
+  color: white;
 }
 
 
-main {
-  width: 960px;
-  margin: auto;
-}
-
-footer {
-  width: 
-}
 main > img:first-child {
   margin-bottom: 30px;
+  padding-top: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 main ul {
   overflow: hidden;
 }
 
-main > ul > li {
+main > ul > li > img{
   float: left;
+  padding-left: 30px;
+  
 }
 
 main > ul >li:nth-child(2) {
   margin: 0 30px;  
 }
 
+main > article {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 30px;
+}
 main > article > section {
   width: 50%;
   float: right;
   padding-left: 30px;
+  padding-right: 30px;
 }
 
 section {
   position: relative;
   height: 400px;
+  padding-top: 30px;
 }
 section > button {
   width: 150px;
@@ -81,12 +93,24 @@ section > button :hover {
 }
 
 h3 {
+  padding-top: 30px;
   font-size: 1.3em;
   margin-bottom: 7px;
 }
 
 p {
+  
+  height: 350px;
   font-size: 1em;
   overflow: hidden;
   overflow-y: scroll;
+}
+
+footer{
+
+  height: 95px;
+  margin: auto;
+  background-color: rgb(108, 110, 110);
+  padding-top: 30px;
+  width: 1030px;
 }
